# TradingAgents

./: .gitignore  README.md  pyproject.toml  run_webui.py
docs/: JADECAP_AGENTS.md
tradingagents/: jadecap_config.py
tradingagents/agents/analysts/: market_analyst_jadecap.py  news_analyst_jadecap.py
tradingagents/agents/managers/: portfolio_manager_jadecap.py  research_manager_jadecap.py
tradingagents/agents/researchers/: bear_researcher_jadecap.py  bull_researcher_jadecap.py
tradingagents/agents/risk_mgmt/: aggressive_debator_jadecap.py  conservative_debator_jadecap.py  neutral_debator_jadecap.py
tradingagents/agents/trader/: trader_jadecap.py
tradingagents/agents/utils/: ict_tools.py
tradingagents/dataflows/: alpha_vantage_common.py  config.py  databento_nq.py  ict_indicators.py  interface.py  y_finance.py
tradingagents/graph/: conditional_logic.py  setup.py  trading_graph.py
webui/backend/: app.py  database.py  memory_bridge.py  runner.py  ws.py
webui/backend/routes/: cache.py  config.py  memories.py  prices.py  runs.py
webui/frontend/: index.html  package-lock.json  package.json
webui/frontend/src/: App.jsx  index.css
webui/frontend/src/components/: AgentProgress.jsx  DebateViewer.jsx  ErrorBanner.jsx  Layout.jsx  LiveMessages.jsx  MemoryExplorer.jsx  PriceTicker.jsx  ReportViewer.jsx  RunForm.jsx  RunTable.jsx  SignalBadge.jsx  StatusDot.jsx
webui/frontend/src/hooks/: useApi.js  useTheme.js  useWebSocket.js
webui/frontend/src/pages/: CompareView.jsx  Dashboard.jsx  LiveRun.jsx  Memories.jsx  RunDetails.jsx  Settings.jsx
